--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Saludar</title>
 </head>
 <body>
-    <button>Saludar</button>
+  <button id="saludarBoton">Saludar</button>
+
+  <script>
+    const saludarButton = document.getElementById('saludarBoton');
+
+    saludarButton.onclick = function() {
+      alert('Hola!');
+    };
+  </script>
+  
 </body>
 </html>
