--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="eventos.js"></script>
   <title>Saludar</title>
+
 </head>
 <body>
-  <button id="saludarBoton">Saludar</button>
 
-  <script>
+    <div id="saludarDiv" style="padding: 5px; background-color: green;">
+        <button id="saludarBoton">Saludar</button>
+    </div>
+
+<script>
     const saludarButton = document.getElementById('saludarBoton');
 
     saludarButton.onclick = function() {
       alert('Hola!');
     };
-  </script>
-  
+</script>
+
 </body>
 </html>
